코드컨벤션

--- a/src/main/resources/templates/comp/offer/detailOnly.mustache
+++ b/src/main/resources/templates/comp/offer/detailOnly.mustache
@@ -148,8 +148,10 @@
 								      style="background-color: #7F00FF">{{skill.skillname}}</span>{{/postingSkill}}
 						</div>
 						<div>
-							{{#career}}<span class="badge" style="background-color: #f9b233">{{career}}</span>{{/career}}
-							{{#education}}<span class="badge" style="background-color: #f27d0c">{{education}}</span>{{/education}}
+							{{#career}}
+								<span class="badge" style="background-color: #f9b233">{{career}}</span>{{/career}}
+							{{#education}}
+								<span class="badge" style="background-color: #f27d0c">{{education}}</span>{{/education}}
 							<span class="badge" style="background-color: #f95959">{{region}}</span>
 						</div>
 					</a>
