--- a/src/main/resources/templates/user/bookmark/form.mustache
+++ b/src/main/resources/templates/user/bookmark/form.mustache
@@ -58,8 +58,9 @@
 							<div>
 								{{#career}}<span class="badge" style="background-color: #f9b233">{{ career }}</span
 								>{{/career}}
-								{{#education}}<span class="badge " style="background-color: #f27d0c">{{ education }}</span
-								>{{/education}}
+								{{#education}}
+									<span class="badge " style="background-color: #f27d0c">{{ education }}</span
+									>{{/education}}
 								<span class="badge" style="background-color: #f95959">{{ region }}</span>
 							</div>
 						</a>
