--- a/src/main/resources/templates/comp/detail.mustache
+++ b/src/main/resources/templates/comp/detail.mustache
@@ -1,55 +1,60 @@
 {{> layout/header}}
 
 
-	<!-- 18번 기업 페이지 상세보기 -->
-		<div class="col-auto container border border-info">
+<!-- 18번 기업 페이지 상세보기 -->
+<div class="col-auto container border border-info">
 
-			<div class="">
-				<h1 class="text-center mt-2">기업 페이지</h1>
+	<div class="">
+		<h1 class="text-center mt-2">기업 페이지</h1>
 
-				<div class="d-flex">
-					<div class="m-1 col-4 d-flex flex-column img-fluid d-block m-auto" style="width:180px; height:280px;">
-						<img src="../../../images/{{#company.photo}}{{company.photo}}{{/company.photo}}" class=""/>
-					</div>
+		<div class="d-flex">
+			<div class="m-1 col-4 d-flex flex-column img-fluid d-block m-auto" style="width:180px; height:280px;">
+				<img src="../../../images/{{#company.photo}}{{company.photo}}{{/company.photo}}" class=""/>
+			</div>
 
-					<div class="col-8 ps-3">
-							<div class="input-group mb-3">
-								<span class="input-group-text">회사명</span>
-								<input type="text" class="form-control" value="{{#company.compname}}{{company.compname}}{{/company.compname}}" disabled>
-							</div>
-							<div class="input-group mb-3">
-								<span class="input-group-text">사업자번호</span>
-								<input type="text" class="form-control" value="{{#company.compRegister}}{{company.compRegister}}{{/company.compRegister}}" disabled>
-							</div>
-							<div class="input-group mb-3">
-								<span class="input-group-text">주소</span>
-								<textarea class="form-control" rows="2" name="address" disabled>{{#company.address}}{{company.address}}{{/company.address}}</textarea>
-							</div>
-							<div class="input-group mb-3">
-								<span class="input-group-text">이메일</span>
-								<input type="text" class="form-control" value="{{company.email}}" name="email" disabled>
-							</div>
-							<div class="input-group mb-3">
-								<span class="input-group-text">전화번호</span>
-								<input type="text" class="form-control" value="{{company.tel}}" name="tel" disabled>
-							</div>
-							<div class="input-group mb-3">
-								<span class="input-group-text">홈페이지</span>
-								<input type="text" class="form-control" value="{{#company.homepage}}{{company.homepage}}{{/company.homepage}}" name="homepage" disabled>
-							</div>
-							
-					</div>
-
+			<div class="col-8 ps-3">
+				<div class="input-group mb-3">
+					<span class="input-group-text">회사명</span>
+					<input type="text" class="form-control"
+					       value="{{#company.compname}}{{company.compname}}{{/company.compname}}" disabled>
+				</div>
+				<div class="input-group mb-3">
+					<span class="input-group-text">사업자번호</span>
+					<input type="text" class="form-control"
+					       value="{{#company.compRegister}}{{company.compRegister}}{{/company.compRegister}}" disabled>
+				</div>
+				<div class="input-group mb-3">
+					<span class="input-group-text">주소</span>
+					<textarea class="form-control" rows="2" name="address"
+					          disabled>{{#company.address}}{{company.address}}{{/company.address}}</textarea>
+				</div>
+				<div class="input-group mb-3">
+					<span class="input-group-text">이메일</span>
+					<input type="text" class="form-control" value="{{company.email}}" name="email" disabled>
+				</div>
+				<div class="input-group mb-3">
+					<span class="input-group-text">전화번호</span>
+					<input type="text" class="form-control" value="{{company.tel}}" name="tel" disabled>
+				</div>
+				<div class="input-group mb-3">
+					<span class="input-group-text">홈페이지</span>
+					<input type="text" class="form-control"
+					       value="{{#company.homepage}}{{company.homepage}}{{/company.homepage}}" name="homepage"
+					       disabled>
 				</div>
 
 			</div>
 
 		</div>
 
+	</div>
+
+</div>
 
 
 
 
-			
+
+
 
 {{> layout/footer}}
