--- a/src/main/resources/templates/comp/detailOnly.mustache
+++ b/src/main/resources/templates/comp/detailOnly.mustache
@@ -3,179 +3,183 @@
 <!-- 기업_상세보기 페이지 새창 -->
 
 <html lang="en">
-	<head>
-		<title>구플</title>
-		<meta charset="utf-8"/>
-		<meta name="viewport" content="width=device-width, initial-scale=1"/>
-		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"/>
-		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-		<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-		<link href="https://cdn.jsdelivr.net/npm/summernote@0.8.18/dist/summernote.min.css" rel="stylesheet"/>
-		<script src="https://cdn.jsdelivr.net/npm/summernote@0.8.18/dist/summernote.min.js"></script>
-	
-		<link rel="icon" href="/images/brand.png">
-	
+<head>
+	<title>구플</title>
+	<meta charset="utf-8"/>
+	<meta name="viewport" content="width=device-width, initial-scale=1"/>
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"/>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+	<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+	<link href="https://cdn.jsdelivr.net/npm/summernote@0.8.18/dist/summernote.min.css" rel="stylesheet"/>
+	<script src="https://cdn.jsdelivr.net/npm/summernote@0.8.18/dist/summernote.min.js"></script>
+
+	<link rel="icon" href="/images/brand.png">
+
+	<style>
+		@font-face {
+			font-family: 'Giants-Bold';
+			src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2307-1@1.1/Giants-Bold.woff2') format('woff2');
+			font-weight: 700;
+			font-style: normal;
+		}
+
+		div {
+			font-family: Giants-Bold;
+		}
+	</style>
+
+	{{^sessionComp}}
 		<style>
-			@font-face {
-				font-family: 'Giants-Bold';
-				src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2307-1@1.1/Giants-Bold.woff2') format('woff2');
-				font-weight: 700;
-				font-style: normal;
+			.header_title {
+				color: grey;
 			}
-	
-			div {
-				font-family: Giants-Bold;
+
+			.bg-info {
+				background-color: grey !important;
 			}
+
+			.title1 {
+				font-size: 50px;
+			}
+
+			.header_search {
+				color: white;
+			}
+
 		</style>
-	
-		{{^sessionComp}}
-			<style>
-				.header_title {
-					color: grey;
-				}
-	
-				.bg-info {
-					background-color: grey !important;
-				}
-	
-				.title1 {
-					font-size: 50px;
-				}
-	
-				.header_search {
-					color: white;
-				}
-	
-			</style>
-		{{/sessionComp}}
-		{{#sessionComp}}
-			{{^sessionComp.compname}}
-				<style>
-					.title1 {
-						font-size: 50px;
-						color: pink;
-					}
-	
-					.header_search {
-						background-color: pink;
-					}
-	
-					.bg-info {
-						background-color: pink !important;
-					}
-	
-					.border-info {
-						border-color: pink !important;
-					}
-	
-					.btn-info {
-						border-color: pink;
-						background-color: pink !important;
-					}
-	
-					.btn-info:hover {
-						border-color: pink !important;
-					}
-				</style>
-			{{/sessionComp.compname}}
-		{{/sessionComp}}
-		{{#sessionComp.compname}}
+	{{/sessionComp}}
+	{{#sessionComp}}
+		{{^sessionComp.compname}}
 			<style>
 				.title1 {
 					font-size: 50px;
-					color: #66e3dd;
+					color: pink;
 				}
-	
+
 				.header_search {
-					border-style: solid;
-					background-color: #66e3dd;
+					background-color: pink;
 				}
-	
+
 				.bg-info {
-					background-color: #66e3dd !important;
+					background-color: pink !important;
 				}
-	
+
 				.border-info {
-					border-color: #66e3dd !important;
+					border-color: pink !important;
 				}
-	
+
 				.btn-info {
-					border-color: #66e3dd;
-					background-color: #66e3dd !important;
+					border-color: pink;
+					background-color: pink !important;
 				}
-	
+
 				.btn-info:hover {
-					border-color: #66e3dd !important;
+					border-color: pink !important;
 				}
 			</style>
 		{{/sessionComp.compname}}
-	
-	</head>
+	{{/sessionComp}}
+	{{#sessionComp.compname}}
+		<style>
+			.title1 {
+				font-size: 50px;
+				color: #66e3dd;
+			}
 
-	<body class="d-flex flex-column min-vh-100 d-flex flex-column justify-content-center">
+			.header_search {
+				border-style: solid;
+				background-color: #66e3dd;
+			}
 
+			.bg-info {
+				background-color: #66e3dd !important;
+			}
 
+			.border-info {
+				border-color: #66e3dd !important;
+			}
+
+			.btn-info {
+				border-color: #66e3dd;
+				background-color: #66e3dd !important;
+			}
+
+			.btn-info:hover {
+				border-color: #66e3dd !important;
+			}
+		</style>
+	{{/sessionComp.compname}}
+
+</head>
+
+<body class="d-flex flex-column min-vh-100 d-flex flex-column justify-content-center">
 
 
 	<!-- 18번 -->
-		<div class="container border border-info">
+	<div class="container border border-info">
 
-			<form action="/comp/updateForm/{{sessionComp.userId}}/update" method="post" onsubmit="" class="col-auto container" id="selectform" enctype="multipart/form-data">
-				<h1 class="text-center mt-2">기업 페이지</h1>
+		<form action="/comp/updateForm/{{sessionComp.userId}}/update" method="post" onsubmit=""
+		      class="col-auto container" id="selectform" enctype="multipart/form-data">
+			<h1 class="text-center mt-2">기업 페이지</h1>
 
-				<div class="d-flex">
-					<div class="m-1 col-4 d-flex flex-column img-fluid d-block m-auto" style="width:180px; height:280px;">
-						<img src="../../../images/{{#sessionComp.photo}}{{sessionComp.photo}}{{/sessionComp.photo}}" class=""/>
+			<div class="d-flex">
+				<div class="m-1 col-4 d-flex flex-column img-fluid d-block m-auto" style="width:180px; height:280px;">
+					<img src="../../../images/{{#sessionComp.photo}}{{sessionComp.photo}}{{/sessionComp.photo}}"
+					     class=""/>
+				</div>
+
+				<div class="col-8 p-2">
+					<div class="input-group mb-3">
+						<span class="input-group-text">회사명</span>
+						<input type="text" class="form-control"
+						       value="{{#sessionComp.compname}}{{sessionComp.compname}}{{/sessionComp.compname}}"
+						       disabled>
+					</div>
+					<div class="input-group mb-3">
+						<span class="input-group-text">사업자번호</span>
+						<input type="text" class="form-control"
+						       value="{{#sessionComp.compRegister}}{{sessionComp.compRegister}}{{/sessionComp.compRegister}}"
+						       disabled>
+					</div>
+					<div class="input-group mb-3">
+						<span class="input-group-text">주소</span>
+						<textarea class="form-control" rows="2"
+						          name="address">{{#sessionComp.address}}{{sessionComp.address}}{{/sessionComp.address}}</textarea>
+					</div>
+					<div class="input-group mb-3">
+						<span class="input-group-text">전화번호</span>
+						<input type="text" class="form-control" value="{{sessionComp.tel}}" name="tel">
+					</div>
+					<div class="input-group mb-3">
+						<span class="input-group-text">홈페이지</span>
+						<input type="text" class="form-control"
+						       value="{{#sessionComp.homepage}}{{sessionComp.homepage}}{{/sessionComp.homepage}}"
+						       name="homepage">
+					</div>
+					<div class="mb-2">
+						<input type="file" class="form-control" name="photo">
 					</div>
 
-					<div class="col-8 p-2">
-							<div class="input-group mb-3">
-								<span class="input-group-text">회사명</span>
-								<input type="text" class="form-control" value="{{#sessionComp.compname}}{{sessionComp.compname}}{{/sessionComp.compname}}" disabled>
-							</div>
-							<div class="input-group mb-3">
-								<span class="input-group-text">사업자번호</span>
-								<input type="text" class="form-control" value="{{#sessionComp.compRegister}}{{sessionComp.compRegister}}{{/sessionComp.compRegister}}" disabled>
-							</div>
-							<div class="input-group mb-3">
-								<span class="input-group-text">주소</span>
-								<textarea class="form-control" rows="2" name="address">{{#sessionComp.address}}{{sessionComp.address}}{{/sessionComp.address}}</textarea>
-							</div>
-							<div class="input-group mb-3">
-								<span class="input-group-text">전화번호</span>
-								<input type="text" class="form-control" value="{{sessionComp.tel}}" name="tel">
-							</div>
-							<div class="input-group mb-3">
-								<span class="input-group-text">홈페이지</span>
-								<input type="text" class="form-control" value="{{#sessionComp.homepage}}{{sessionComp.homepage}}{{/sessionComp.homepage}}" name="homepage">
-							</div>
-							<div class="mb-2">
-								<input type="file" class="form-control" name="photo">
-							</div>
-							
-					</div>
-
 				</div>
 
-				<!--
+			</div>
 
-				<div class="input-group mb-3 ms-1">
-					<span class="input-group-text">기업소개</span>
-					<textarea class="form-control" rows="5"></textarea>
-				</div>
-				-->
+			<!--
 
-				<div>
-					<input id="button" class="btn btn-primary w-100 mb-3" type="submit" value="기업 정보 수정" onclick="">
-				</div>
+            <div class="input-group mb-3 ms-1">
+                <span class="input-group-text">기업소개</span>
+                <textarea class="form-control" rows="5"></textarea>
+            </div>
+            -->
 
-			</form>
+			<div>
+				<input id="button" class="btn btn-primary w-100 mb-3" type="submit" value="기업 정보 수정" onclick="">
+			</div>
+
+		</form>
 
 		<div class="container border border-info">
 
 
-
-
-
-	</body>
+</body>
 </html>
