--- a/src/main/resources/templates/comp/offer/list.mustache
+++ b/src/main/resources/templates/comp/offer/list.mustache
@@ -4,204 +4,196 @@
 <!-- 22번 기업_입사제안 목록 페이지 -->
 
 
-
-		<div class="col-9 m-auto">
-			<h1 class=" text-center mt-2 mb-2">입사제안 목록</h1>
-
+<div class="col-9 m-auto">
+	<h1 class=" text-center mt-2 mb-2">입사제안 목록</h1>
 
 
-		<div class="d-flex justify-content-center mb-2">
+	<div class="d-flex justify-content-center mb-2">
 
-			<a href="javascript:void(0);" class="btn btn-info m-2" onclick="openNewWindow('/comp/posting/newWindow/{{posting.id}}')">
-				<div class="">
-					<div class="fw-bold">{{posting.title}}</div>
-					<span class="badge" style="background-color: #2f3a7d">{{posting.position}}</span>
-					<span class="expiryDate badge" style="background-color: red">{{#posting.expiryDate}}{{posting.expiryDate}}{{/posting.expiryDate}}</span>
-				</div>
-				<div class="">
-					{{#posting.postingSkill}}<span class="badge me-1" style="background-color: #7F00FF">{{skill.skillname}}</span>{{/posting.postingSkill}}
-				</div>
-				<div>
-					{{#posting.career}}<span class="badge" style="background-color: #f9b233">{{posting.career}}</span>{{/posting.career}}
-					{{#posting.education}}<span class="badge" style="background-color: #f27d0c">{{posting.education}}</span>{{/posting.education}}
-					<span class="badge" style="background-color: #f95959">{{posting.region}}</span>
-				</div>
-			</a>
-			
-			<h5 class="align-self-center"> : 이 공고로 입사제안을 했습니다.</h5>
+		<a href="javascript:void(0);" class="btn btn-info m-2"
+		   onclick="openNewWindow('/comp/posting/newWindow/{{posting.id}}')">
+			<div class="">
+				<div class="fw-bold">{{posting.title}}</div>
+				<span class="badge" style="background-color: #2f3a7d">{{posting.position}}</span>
+				<span class="expiryDate badge"
+				      style="background-color: red">{{#posting.expiryDate}}{{posting.expiryDate}}{{/posting.expiryDate}}</span>
+			</div>
+			<div class="">
+				{{#posting.postingSkill}}<span class="badge me-1"
+				                               style="background-color: #7F00FF">{{skill.skillname}}</span>{{/posting.postingSkill}}
+			</div>
+			<div>
+				{{#posting.career}}
+					<span class="badge" style="background-color: #f9b233">{{posting.career}}</span>{{/posting.career}}
+				{{#posting.education}}<span class="badge"
+				                            style="background-color: #f27d0c">{{posting.education}}</span>{{/posting.education}}
+				<span class="badge" style="background-color: #f95959">{{posting.region}}</span>
+			</div>
+		</a>
 
-		</div>
+		<h5 class="align-self-center"> : 이 공고로 입사제안을 했습니다.</h5>
 
-			
-
-
-			<table class="table table-bordered">
-				<thead>
-				  <tr class="table-secondary">
-					<th class="text-center" scope="col">No.</th>
-					<th class="text-center" scope="col">이름</th>
-					<th class="text-center" scope="col">이력서</th>
-					<!-- <th class="text-center" scope="col">생년월일</th> -->
-					<th class="text-center" scope="col">경력</th>
-					<th class="text-center" scope="col">학력</th>
-					<th class="text-center" scope="col">보유기술</th>
-					<th class="text-center" scope="col">응답</th>
-				  </tr>
-				</thead>
-				<tbody>
-
-					{{^recommendList}}
-					<tr>
-						<th class="text-center" scope="row">없음</th>
-						<td class="text-center border border-0"></td>
-						<td class="text-center border border-0"></td>
-						<td class="text-center border border-0"></td>
-						<td class="text-center border border-0"></td>
-						<td class="text-center border border-0"></td>
-						<td class="text-center border-start-0"></td>
-					</tr>
-					{{/recommendList}}
-					
-					{{#recommendList}}
-					<tr class="{{statement}}">
-						<th class="text-center" scope="row"><div class="increNumber"></div></th>
-						<td class="text-center">{{resume.user.username}}</td>
-						<td class="text-center"><a href="javascript:void(0);" class="" onclick="openNewWindow('/resume/newWindow/{{resume.id}}')">{{resume.title}}</a></td>
-						<!-- <td class="text-center">{{resume.user.birth}}</td> -->
-						<td class="text-center">{{resume.career}}</td>
-						<td class="text-center">{{resume.grade}}</td>
-						<td class="text-center">
-							<div class="comma">{{#resume.user.userSkillList}}{{skill.skillname}}, {{/resume.user.userSkillList}}</div>
-						</td>
-						<td class="d-flex justify-content-center statementJS">
-							<input type="hidden" value="{{statement}}">
-							<div class="statementJS2"></div>
-							<form action="/comp/posting/offer/{{id}}/cancel" method="post" class="ms-1">
-								<input type="hidden" name="redirectWhere" value="compOfferList">
-								<input class="btn btn-sm btn-warning p-0 ps-1 pe-1 statementButton" type="submit" value="제안 취소">
-							</form>
-						</td>
-					</tr>
-					{{/recommendList}}
+	</div>
 
 
+	<table class="table table-bordered">
+		<thead>
+			<tr class="table-secondary">
+				<th class="text-center" scope="col">No.</th>
+				<th class="text-center" scope="col">이름</th>
+				<th class="text-center" scope="col">이력서</th>
+				<!-- <th class="text-center" scope="col">생년월일</th> -->
+				<th class="text-center" scope="col">경력</th>
+				<th class="text-center" scope="col">학력</th>
+				<th class="text-center" scope="col">보유기술</th>
+				<th class="text-center" scope="col">응답</th>
+			</tr>
+		</thead>
+		<tbody>
 
-				</tbody>
-			  </table>
+			{{^recommendList}}
+				<tr>
+					<th class="text-center" scope="row">없음</th>
+					<td class="text-center border border-0"></td>
+					<td class="text-center border border-0"></td>
+					<td class="text-center border border-0"></td>
+					<td class="text-center border border-0"></td>
+					<td class="text-center border border-0"></td>
+					<td class="text-center border-start-0"></td>
+				</tr>
+			{{/recommendList}}
+
+			{{#recommendList}}
+				<tr class="{{statement}}">
+					<th class="text-center" scope="row">
+						<div class="increNumber"></div>
+					</th>
+					<td class="text-center">{{resume.user.username}}</td>
+					<td class="text-center"><a href="javascript:void(0);" class=""
+					                           onclick="openNewWindow('/resume/newWindow/{{resume.id}}')">{{resume.title}}</a>
+					</td>
+					<!-- <td class="text-center">{{resume.user.birth}}</td> -->
+					<td class="text-center">{{resume.career}}</td>
+					<td class="text-center">{{resume.grade}}</td>
+					<td class="text-center">
+						<div class="comma">{{#resume.user.userSkillList}}{{skill.skillname}}
+							, {{/resume.user.userSkillList}}</div>
+					</td>
+					<td class="d-flex justify-content-center statementJS">
+						<input type="hidden" value="{{statement}}">
+						<div class="statementJS2"></div>
+						<form action="/comp/posting/offer/{{id}}/cancel" method="post" class="ms-1">
+							<input type="hidden" name="redirectWhere" value="compOfferList">
+							<input class="btn btn-sm btn-warning p-0 ps-1 pe-1 statementButton" type="submit"
+							       value="제안 취소">
+						</form>
+					</td>
+				</tr>
+			{{/recommendList}}
 
 
-		</div>
+		</tbody>
+	</table>
 
 
+</div>
 
 
-
-		<script>
-
-
-			let statementJS = document.querySelectorAll(".statementJS");
-			// console.log(typeof statementJS);
-			// console.log(typeof statementJS[0]);
-			// console.log(typeof statementJS[0].value);
-			// console.log(statementJS[0].value);
-			// console.log(statementJS[1].value);
-			// console.log(statementJS[2].value);
-			
-			statementJS.forEach(element => {
-				let input = element.querySelector("input");
-
-				let statementButton = element.querySelector(".statementButton");
-				let statementJS2 = element.querySelector(".statementJS2");
-				
-				if(input.value == "대기"){
-					statementJS2.innerText = "대기";
-				} else if(input.value == "수락") {
-					statementJS2.innerText = "수락함";
-					statementButton.style.display = 'none';
-				} else {
-					statementJS2.innerText = "거절당함";
-					statementButton.style.display = 'none';
-				}
-			});
+<script>
 
 
-			
-			let increNumber = document.querySelectorAll(".increNumber");
-			// console.log(increNumber);
-			let count=1;
-			increNumber.forEach(element => {
-				element.innerHTML=count++;
-			});
+	let statementJS = document.querySelectorAll(".statementJS");
+	// console.log(typeof statementJS);
+	// console.log(typeof statementJS[0]);
+	// console.log(typeof statementJS[0].value);
+	// console.log(statementJS[0].value);
+	// console.log(statementJS[1].value);
+	// console.log(statementJS[2].value);
+
+	statementJS.forEach(element => {
+		let input = element.querySelector("input");
+
+		let statementButton = element.querySelector(".statementButton");
+		let statementJS2 = element.querySelector(".statementJS2");
+
+		if (input.value == "대기") {
+			statementJS2.innerText = "대기";
+		} else if (input.value == "수락") {
+			statementJS2.innerText = "수락함";
+			statementButton.style.display = 'none';
+		} else {
+			statementJS2.innerText = "거절당함";
+			statementButton.style.display = 'none';
+		}
+	});
 
 
+	let increNumber = document.querySelectorAll(".increNumber");
+	// console.log(increNumber);
+	let count = 1;
+	increNumber.forEach(element => {
+		element.innerHTML = count++;
+	});
 
 
-			let comma = document.querySelectorAll(".comma");
-			comma.forEach(element => {
-				element.innerHTML = element.innerHTML.slice(0, -2);
-			});
-
-
+	let comma = document.querySelectorAll(".comma");
+	comma.forEach(element => {
+		element.innerHTML = element.innerHTML.slice(0, -2);
+	});
 
 
 	function openNewWindow(url) {
-	  var width = 800; // 새 창의 가로 크기
-	  var height = 1100; // 새 창의 세로 크기
-	  var left = (window.innerWidth - width) / 2; // 화면 중앙에 위치
-	  var top = (window.innerHeight - height) / 2; // 화면 중앙에 위치
-	
-	  var options = 'width=' + width + ',height=' + height + ',left=' + left + ',top=' + top;
-	  window.open(url, '새 창', options);
+		var width = 800; // 새 창의 가로 크기
+		var height = 1100; // 새 창의 세로 크기
+		var left = (window.innerWidth - width) / 2; // 화면 중앙에 위치
+		var top = (window.innerHeight - height) / 2; // 화면 중앙에 위치
+
+		var options = 'width=' + width + ',height=' + height + ',left=' + left + ',top=' + top;
+		window.open(url, '새 창', options);
 	}
 
 
+	function Ddaycheck(day) {
+		if (typeof day === "string") {
+			let day2 = new Date(day);
+			return Ddaycheck(day2);
+		} else {
+			let today = new Date();
 
+			// console.log((day-today) / (1000 * 60 * 60 * 24));
+			let DDay = Math.ceil((day - today) / (1000 * 60 * 60 * 24));
 
-			function Ddaycheck(day){
-				if(typeof day === "string"){
-					let day2 = new Date(day);
-					return Ddaycheck(day2);
-				} else{
-					let today = new Date();
-		
-					// console.log((day-today) / (1000 * 60 * 60 * 24));
-					let DDay = Math.ceil( (day-today) / (1000 * 60 * 60 * 24));
-		
-					if(DDay==0){
-						// console.log("D-Day");
-						return "D-Day";
-					}
-					else if(DDay<0){
-						// console.log("만료");
-						return "만료";
-					}
-					else{
-						// console.log("D-"+DDay); 
-						return "D-"+DDay;
-					}
-				}
+			if (DDay == 0) {
+				// console.log("D-Day");
+				return "D-Day";
+			} else if (DDay < 0) {
+				// console.log("만료");
+				return "만료";
+			} else {
+				// console.log("D-"+DDay);
+				return "D-" + DDay;
 			}
-		
-		
-		
-			let day = document.querySelectorAll('.expiryDate');
-			day.forEach(element => {
-				element.textContent = Ddaycheck(element.textContent);
-			});
+		}
+	}
 
-			
-			
-			let statementRed = document.querySelectorAll('.거절');
-			statementRed.forEach(element => {
-				element.classList.add("table-danger");
-			});
-			let statementGreen = document.querySelectorAll('.수락');
-			statementGreen.forEach(element => {
-				element.classList.add("table-success");
-			});
-		
-		</script>
-		
+
+	let day = document.querySelectorAll('.expiryDate');
+	day.forEach(element => {
+		element.textContent = Ddaycheck(element.textContent);
+	});
+
+
+	let statementRed = document.querySelectorAll('.거절');
+	statementRed.forEach(element => {
+		element.classList.add("table-danger");
+	});
+	let statementGreen = document.querySelectorAll('.수락');
+	statementGreen.forEach(element => {
+		element.classList.add("table-success");
+	});
+
+</script>
+
 
 
 
