--- a/src/main/resources/templates/comp/resume/listCompReceived.mustache
+++ b/src/main/resources/templates/comp/resume/listCompReceived.mustache
@@ -4,196 +4,198 @@
 <!-- 22번 기업이 받은 모든 이력서 페이지 -->
 
 <div class="col-9 m-auto">
-  <h1 class="text-center mt-2">기업이 받은 모든 이력서</h1>
-  <div class="text-center mb-4">
-    <a href="/comp/{{ sessionComp.userId }}/posting/list"
-      >개별 구인공고 기준으로 보기</a
-    >
-  </div>
+	<h1 class="text-center mt-2">기업이 받은 모든 이력서</h1>
+	<div class="text-center mb-4">
+		<a href="/comp/{{ sessionComp.userId }}/posting/list"
+		>개별 구인공고 기준으로 보기</a
+		>
+	</div>
 
-  <table class="table table-bordered">
-    <thead>
-      <tr class="table-secondary">
-        <th class="text-center" scope="col">No.</th>
-        <th class="text-center" scope="col">공고</th>
-        <th class="text-center" scope="col">받은 이력서</th>
-        <th class="text-center" scope="col">이름</th>
-        <th class="text-center" scope="col">경력</th>
-        <th class="text-center" scope="col">학력</th>
-        <th class="text-center" scope="col">응답</th>
-      </tr>
-    </thead>
-    <tbody>
-      {{^applyCompDTOList}}
-      <tr>
-        <th class="text-center" scope="row">없음</th>
-        <td class="text-center border border-0"></td>
-        <td class="text-center border border-0"></td>
-        <td class="text-center border border-0"></td>
-        <td class="text-center border border-0"></td>
-        <td class="text-center border border-0"></td>
-        <td class="text-center border-start-0"></td>
-      </tr>
-      {{/applyCompDTOList}}
+	<table class="table table-bordered">
+		<thead>
+			<tr class="table-secondary">
+				<th class="text-center" scope="col">No.</th>
+				<th class="text-center" scope="col">공고</th>
+				<th class="text-center" scope="col">받은 이력서</th>
+				<th class="text-center" scope="col">이름</th>
+				<th class="text-center" scope="col">경력</th>
+				<th class="text-center" scope="col">학력</th>
+				<th class="text-center" scope="col">응답</th>
+			</tr>
+		</thead>
+		<tbody>
+			{{^applyCompDTOList}}
+				<tr>
+					<th class="text-center" scope="row">없음</th>
+					<td class="text-center border border-0"></td>
+					<td class="text-center border border-0"></td>
+					<td class="text-center border border-0"></td>
+					<td class="text-center border border-0"></td>
+					<td class="text-center border border-0"></td>
+					<td class="text-center border-start-0"></td>
+				</tr>
+			{{/applyCompDTOList}}
 
-      {{#applyCompDTOList}}
-      <tr class="{{ statement }}">
-        <th class="text-center" scope="row"><div class="increNumber"></div></th>
-        <td class="text-center">
-          <a
-            href="javascript:void(0);"
-            class=""
-            onclick="openNewWindow('/comp/posting/newWindow/{{ postingId }}')"
-            >{{ postingTitle }}</a
-          >
-        </td>
-        <td class="text-center">
-          <a
-            href="javascript:void(0);"
-            class=""
-            onclick="openNewWindow('/resume/newWindow/{{ resumeId }}')"
-            >{{ resumeTitle }}</a
-          >
-        </td>
-        <td class="text-center">{{ username }}</td>
-        <td class="text-center">{{ resumeCareer }}</td>
-        <td class="text-center">{{ resumeGrade }}</td>
+			{{#applyCompDTOList}}
+				<tr class="{{ statement }}">
+					<th class="text-center" scope="row">
+						<div class="increNumber"></div>
+					</th>
+					<td class="text-center">
+						<a
+							href="javascript:void(0);"
+							class=""
+							onclick="openNewWindow('/comp/posting/newWindow/{{ postingId }}')"
+						>{{ postingTitle }}</a
+						>
+					</td>
+					<td class="text-center">
+						<a
+							href="javascript:void(0);"
+							class=""
+							onclick="openNewWindow('/resume/newWindow/{{ resumeId }}')"
+						>{{ resumeTitle }}</a
+						>
+					</td>
+					<td class="text-center">{{ username }}</td>
+					<td class="text-center">{{ resumeCareer }}</td>
+					<td class="text-center">{{ resumeGrade }}</td>
 
-        <td class="d-flex justify-content-center statementJS">
-          <input type="hidden" value="{{ statement }}" />
-          <div class="statementJS2"></div>
+					<td class="d-flex justify-content-center statementJS">
+						<input type="hidden" value="{{ statement }}"/>
+						<div class="statementJS2"></div>
 
-          <form action="/comp/posting/apply/{{ applyId }}/pass" method="post">
-            <input type="hidden" name="redirectWhere" value="resumeListCompReceived" />
-            <input
-              class="btn btn-sm btn-success p-0 ps-1 pe-1 me-1 passButton"
-              type="submit"
-              onclick="changeState('{{ username }}')"
-              value="합격"
-            />
-          </form>
-          <form action="/comp/posting/apply/{{ applyId }}/fail" method="post">
-            <input type="hidden" name="redirectWhere" value="resumeListCompReceived" />
-            <input
-              class="btn btn-sm btn-danger p-0 ps-1 pe-1 failButton"
-              type="submit"
-              onclick="changeState('{{ username }}')"
-              value="불합격"
-            />
-          </form>
-        </td>
-      </tr>
-      {{/applyCompDTOList}}
-    </tbody>
-  </table>
+						<form action="/comp/posting/apply/{{ applyId }}/pass" method="post">
+							<input type="hidden" name="redirectWhere" value="resumeListCompReceived"/>
+							<input
+								class="btn btn-sm btn-success p-0 ps-1 pe-1 me-1 passButton"
+								type="submit"
+								onclick="changeState('{{ username }}')"
+								value="합격"
+							/>
+						</form>
+						<form action="/comp/posting/apply/{{ applyId }}/fail" method="post">
+							<input type="hidden" name="redirectWhere" value="resumeListCompReceived"/>
+							<input
+								class="btn btn-sm btn-danger p-0 ps-1 pe-1 failButton"
+								type="submit"
+								onclick="changeState('{{ username }}')"
+								value="불합격"
+							/>
+						</form>
+					</td>
+				</tr>
+			{{/applyCompDTOList}}
+		</tbody>
+	</table>
 </div>
 
 <script>
-  let statementJS = document.querySelectorAll(".statementJS");
-  // console.log(typeof statementJS);
-  // console.log(typeof statementJS[0]);
-  // console.log(typeof statementJS[0].value);
-  // console.log(statementJS[0].value);
-  // console.log(statementJS[1].value);
-  // console.log(statementJS[2].value);
+	let statementJS = document.querySelectorAll(".statementJS");
+	// console.log(typeof statementJS);
+	// console.log(typeof statementJS[0]);
+	// console.log(typeof statementJS[0].value);
+	// console.log(statementJS[0].value);
+	// console.log(statementJS[1].value);
+	// console.log(statementJS[2].value);
 
-  statementJS.forEach((element) => {
-    let input = element.querySelector("input");
+	statementJS.forEach((element) => {
+		let input = element.querySelector("input");
 
-    if (input.value == "대기") {
-      return;
-    }
+		if (input.value == "대기") {
+			return;
+		}
 
-    let passButton = element.querySelector(".passButton");
-    let failButton = element.querySelector(".failButton");
-    let statementJS2 = element.querySelector(".statementJS2");
+		let passButton = element.querySelector(".passButton");
+		let failButton = element.querySelector(".failButton");
+		let statementJS2 = element.querySelector(".statementJS2");
 
-    if (input.value == "합격") {
-      passButton.style.display = "none";
-      failButton.style.display = "none";
-      statementJS2.innerText = "합격";
-    } else {
-      passButton.style.display = "none";
-      failButton.style.display = "none";
-      statementJS2.innerText = "불합격";
-    }
-  });
+		if (input.value == "합격") {
+			passButton.style.display = "none";
+			failButton.style.display = "none";
+			statementJS2.innerText = "합격";
+		} else {
+			passButton.style.display = "none";
+			failButton.style.display = "none";
+			statementJS2.innerText = "불합격";
+		}
+	});
 
-  let increNumber = document.querySelectorAll(".increNumber");
-  // console.log(increNumber);
-  let count = 1;
-  increNumber.forEach((element) => {
-    element.innerHTML = count++;
-  });
+	let increNumber = document.querySelectorAll(".increNumber");
+	// console.log(increNumber);
+	let count = 1;
+	increNumber.forEach((element) => {
+		element.innerHTML = count++;
+	});
 
-  let comma = document.querySelectorAll(".comma");
-  comma.forEach((element) => {
-    element.innerHTML = element.innerHTML.slice(0, -2);
-  });
+	let comma = document.querySelectorAll(".comma");
+	comma.forEach((element) => {
+		element.innerHTML = element.innerHTML.slice(0, -2);
+	});
 
-  function openNewWindow(url) {
-    var width = 800; // 새 창의 가로 크기
-    var height = 1100; // 새 창의 세로 크기
-    var left = (window.innerWidth - width) / 2; // 화면 중앙에 위치
-    var top = (window.innerHeight - height) / 2; // 화면 중앙에 위치
+	function openNewWindow(url) {
+		var width = 800; // 새 창의 가로 크기
+		var height = 1100; // 새 창의 세로 크기
+		var left = (window.innerWidth - width) / 2; // 화면 중앙에 위치
+		var top = (window.innerHeight - height) / 2; // 화면 중앙에 위치
 
-    var options =
-      "width=" + width + ",height=" + height + ",left=" + left + ",top=" + top;
-    window.open(url, "새 창", options);
-  }
+		var options =
+			"width=" + width + ",height=" + height + ",left=" + left + ",top=" + top;
+		window.open(url, "새 창", options);
+	}
 
-  function Ddaycheck(day) {
-    if (typeof day === "string") {
-      let day2 = new Date(day);
-      return Ddaycheck(day2);
-    } else {
-      let today = new Date();
+	function Ddaycheck(day) {
+		if (typeof day === "string") {
+			let day2 = new Date(day);
+			return Ddaycheck(day2);
+		} else {
+			let today = new Date();
 
-      // console.log((day-today) / (1000 * 60 * 60 * 24));
-      let DDay = Math.ceil((day - today) / (1000 * 60 * 60 * 24));
+			// console.log((day-today) / (1000 * 60 * 60 * 24));
+			let DDay = Math.ceil((day - today) / (1000 * 60 * 60 * 24));
 
-      if (DDay == 0) {
-        // console.log("D-Day");
-        return "D-Day";
-      } else if (DDay < 0) {
-        // console.log("만료");
-        return "만료";
-      } else {
-        // console.log("D-"+DDay);
-        return "D-" + DDay;
-      }
-    }
-  }
+			if (DDay == 0) {
+				// console.log("D-Day");
+				return "D-Day";
+			} else if (DDay < 0) {
+				// console.log("만료");
+				return "만료";
+			} else {
+				// console.log("D-"+DDay);
+				return "D-" + DDay;
+			}
+		}
+	}
 
-  let day = document.querySelectorAll(".expiryDate");
-  day.forEach((element) => {
-    element.textContent = Ddaycheck(element.textContent);
-  });
+	let day = document.querySelectorAll(".expiryDate");
+	day.forEach((element) => {
+		element.textContent = Ddaycheck(element.textContent);
+	});
 
-  let statementRed = document.querySelectorAll(".불합");
-  statementRed.forEach((element) => {
-    element.classList.add("table-danger");
-  });
-  let statementGreen = document.querySelectorAll(".합격");
-  statementGreen.forEach((element) => {
-    element.classList.add("table-success");
-  });
+	let statementRed = document.querySelectorAll(".불합");
+	statementRed.forEach((element) => {
+		element.classList.add("table-danger");
+	});
+	let statementGreen = document.querySelectorAll(".합격");
+	statementGreen.forEach((element) => {
+		element.classList.add("table-success");
+	});
 
-  async function changeState(username) {
-    let requestBody = {
-      username: username,
-    };
+	async function changeState(username) {
+		let requestBody = {
+			username: username,
+		};
 
-    let response = await fetch(`/api/user/changeState`, {
-      method: "post",
-      headers: {
-        "Content-Type": "application/json",
-      },
-      body: JSON.stringify(requestBody),
-    });
+		let response = await fetch(`/api/user/changeState`, {
+			method: "post",
+			headers: {
+				"Content-Type": "application/json",
+			},
+			body: JSON.stringify(requestBody),
+		});
 
-    let result = await response.json();
-  }
+		let result = await response.json();
+	}
 </script>
 
 {{> layout/comp2footer}}
