--- a/src/main/resources/templates/user/resume/detailForm.mustache
+++ b/src/main/resources/templates/user/resume/detailForm.mustache
@@ -1,177 +1,179 @@
 {{> layout/header}}
 <div class="d-flex mb-3">
-  <div class="col-2"></div>
-  <div class="card col-8 h-auto d-flex border border-info">
-    <h1 class="text-center mt-2">이력서 상세보기</h1>
-    <div class="d-flex">
-      <div class="m-2 col-4 d-flex flex-column align-items-center">
-        <img src="../../../../../images/{{resume.user.photo}}" class="circle_avatar"
-          style="width: 150px; height: 150px" />
-      </div>
-      <div class="col-8 p-2">
-        <div class="input-group mb-3">
-          <span class="input-group-text"><span class="ms-2 me-4">이름</span></span>
-          <input type="text" class="form-control" name="username" value="{{{resume.user.username}}}" disabled />
-        </div>
-        <div class="input-group mb-3">
-          <span class="input-group-text">전화번호</span>
-          <input type="text" class="form-control" name="tel" value="{{{resume.user.tel}}}" disabled />
-        </div>
-        <div class="input-group mb-3">
-          <span class="input-group-text"><span class="ms-2 me-4">주소</span></span>
-          <input type="text" class="form-control" name="address" value="{{{resume.user.address}}}" disabled />
-        </div>
-        <div class="input-group mb-3">
-          <span class="input-group-text">생년월일</span>
-          <input type="text" class="form-control" name="birth" value="{{{resume.user.birth}}}" disabled />
-        </div>
-      </div>
-    </div>
-    <div class="input-group ms-2 mb-3">
-      <div><span class="input-group-text">이력서 제목</span></div>
-      <input type="text" class="form-control" value="{{{resume.title}}}" disabled />
-    </div>
-    <div class="input-group ms-2 mb-3">
-      <span class="input-group-text">학력사항</span>
-      <input type="text" class="form-control" value="{{{resume.grade}}}" disabled />
-    </div>
-    <div class="input-group ms-2 mb-3">
-      <span class="input-group-text" center>경력사항</span>
-      <input type="text" class="form-control" value="{{{resume.career}}}" disabled />
-    </div>
+	<div class="col-2"></div>
+	<div class="card col-8 h-auto d-flex border border-info">
+		<h1 class="text-center mt-2">이력서 상세보기</h1>
+		<div class="d-flex">
+			<div class="m-2 col-4 d-flex flex-column align-items-center">
+				<img src="../../../../../images/{{resume.user.photo}}" class="circle_avatar"
+				     style="width: 150px; height: 150px"/>
+			</div>
+			<div class="col-8 p-2">
+				<div class="input-group mb-3">
+					<span class="input-group-text"><span class="ms-2 me-4">이름</span></span>
+					<input type="text" class="form-control" name="username" value="{{{resume.user.username}}}"
+					       disabled/>
+				</div>
+				<div class="input-group mb-3">
+					<span class="input-group-text">전화번호</span>
+					<input type="text" class="form-control" name="tel" value="{{{resume.user.tel}}}" disabled/>
+				</div>
+				<div class="input-group mb-3">
+					<span class="input-group-text"><span class="ms-2 me-4">주소</span></span>
+					<input type="text" class="form-control" name="address" value="{{{resume.user.address}}}" disabled/>
+				</div>
+				<div class="input-group mb-3">
+					<span class="input-group-text">생년월일</span>
+					<input type="text" class="form-control" name="birth" value="{{{resume.user.birth}}}" disabled/>
+				</div>
+			</div>
+		</div>
+		<div class="input-group ms-2 mb-3">
+			<div><span class="input-group-text">이력서 제목</span></div>
+			<input type="text" class="form-control" value="{{{resume.title}}}" disabled/>
+		</div>
+		<div class="input-group ms-2 mb-3">
+			<span class="input-group-text">학력사항</span>
+			<input type="text" class="form-control" value="{{{resume.grade}}}" disabled/>
+		</div>
+		<div class="input-group ms-2 mb-3">
+			<span class="input-group-text" center>경력사항</span>
+			<input type="text" class="form-control" value="{{{resume.career}}}" disabled/>
+		</div>
 
-    <div class="card input-group ms-2 mb-3">
-      <span class="input-group-text">직무 선택</span>
-      <div class="d-flex flex-wrap">
-        <div class="form-check d-inline-block ms-3 me-2">
-          <label class="form-check-label">
-            <input class="form-check-input" type="radio" id="백엔드" name="position" value="백엔드" disabled>
-            백엔드</label>
-        </div>
-        <div class="form-check d-inline-block ms-3 me-2">
-          <label class="form-check-label">
-            <input class="form-check-input" type="radio" id="프론트엔드" name="position" value="프론트엔드" disabled>
-            프론트엔드</label>
-        </div>
-        <div class="form-check d-inline-block ms-3 me-2">
-          <label class="form-check-label">
-            <input class="form-check-input" type="radio" id="풀스택" name="position" value="풀스택" disabled>
-            풀스택</label>
-        </div>
-        <div class="form-check d-inline-block ms-3 me-2">
-          <label class="form-check-label">
-            <input class="form-check-input" type="radio" id="안드로이드" name="position" value="안드로이드" disabled>
-            안드로이드</label>
-        </div>
-        <div class="form-check d-inline-block ms-3 me-2">
-          <label class="form-check-label">
-            <input class="form-check-input" type="radio" id="IOS" name="position" value="IOS" disabled>
-            IOS</label>
-        </div>
-        <div class="form-check d-inline-block ms-3 me-2">
-          <label class="form-check-label">
-            <input class="form-check-input" type="radio" id="임베디드" name="position" value="임베디드" disabled>
-            임베디드</label>
-        </div>
-        <div class="form-check d-inline-block ms-3 me-2">
-          <label class="form-check-label">
-            <input class="form-check-input" type="radio" id="빅데이터" name="position" value="빅데이터" disabled>
-            빅데이터</label>
-        </div>
-        <div class="form-check d-inline-block ms-3 me-2">
-          <label class="form-check-label">
-            <input class="form-check-input" type="radio" id="서버" name="position" value="서버" disabled>
-            서버</label>
-        </div>
-        <div class="form-check d-inline-block ms-3 me-2">
-          <label class="form-check-label">
-            <input class="form-check-input" type="radio" id="머신러닝" name="position" value="머신러닝" disabled>
-            머신러닝</label>
-        </div>
-      </div>
-    </div>
+		<div class="card input-group ms-2 mb-3">
+			<span class="input-group-text">직무 선택</span>
+			<div class="d-flex flex-wrap">
+				<div class="form-check d-inline-block ms-3 me-2">
+					<label class="form-check-label">
+						<input class="form-check-input" type="radio" id="백엔드" name="position" value="백엔드" disabled>
+						백엔드</label>
+				</div>
+				<div class="form-check d-inline-block ms-3 me-2">
+					<label class="form-check-label">
+						<input class="form-check-input" type="radio" id="프론트엔드" name="position" value="프론트엔드" disabled>
+						프론트엔드</label>
+				</div>
+				<div class="form-check d-inline-block ms-3 me-2">
+					<label class="form-check-label">
+						<input class="form-check-input" type="radio" id="풀스택" name="position" value="풀스택" disabled>
+						풀스택</label>
+				</div>
+				<div class="form-check d-inline-block ms-3 me-2">
+					<label class="form-check-label">
+						<input class="form-check-input" type="radio" id="안드로이드" name="position" value="안드로이드" disabled>
+						안드로이드</label>
+				</div>
+				<div class="form-check d-inline-block ms-3 me-2">
+					<label class="form-check-label">
+						<input class="form-check-input" type="radio" id="IOS" name="position" value="IOS" disabled>
+						IOS</label>
+				</div>
+				<div class="form-check d-inline-block ms-3 me-2">
+					<label class="form-check-label">
+						<input class="form-check-input" type="radio" id="임베디드" name="position" value="임베디드" disabled>
+						임베디드</label>
+				</div>
+				<div class="form-check d-inline-block ms-3 me-2">
+					<label class="form-check-label">
+						<input class="form-check-input" type="radio" id="빅데이터" name="position" value="빅데이터" disabled>
+						빅데이터</label>
+				</div>
+				<div class="form-check d-inline-block ms-3 me-2">
+					<label class="form-check-label">
+						<input class="form-check-input" type="radio" id="서버" name="position" value="서버" disabled>
+						서버</label>
+				</div>
+				<div class="form-check d-inline-block ms-3 me-2">
+					<label class="form-check-label">
+						<input class="form-check-input" type="radio" id="머신러닝" name="position" value="머신러닝" disabled>
+						머신러닝</label>
+				</div>
+			</div>
+		</div>
 
 
-    <div class="card input-group ms-2 mb-3">
-      <span class="input-group-text">보유 기술</span>
-      <div class="d-flex flex-wrap">
-        {{#skillList}}
-        <div class="form-check d-inline-block ms-3 me-2">
-          <input class="form-check-input" type="checkbox" id="skill{{ id }}" value="{{ id }}" name="skillList"
-            disabled />
-          <label class="form-check-label">{{ skillname }}</label>
-        </div>
-        {{/skillList}}
-      </div>
-    </div>
-    <div class="input-group ms-2 mb-3">
-      <span class="input-group-text">자기소개서</span>
-      <textarea class="form-control" rows="5" disabled>{{{resume.personalStatement}}}</textarea>
-    </div>
-    <!-- disabled속성은 입력할 수 없는 input태그를 만든다 -->
-    <!-- disabled속성은 적용된 input은 서버로 데이터가 전송되지 않는다-->
-    <!-- readonly속성은 읽기전용 input태그를 만든다 -->
-    <!-- disabled ="ture"가 생략 된것-->
-    <!-- <div>
-            <input class=" btn btn-primary m-2 mb-3 w-20" type="submit" value="닫기">
-            <input class=" btn btn-warning m-2 mb-3 w-20" type="submit" value="수정">
-            <input class=" btn btn-danger m-2 mb-3 w-20" type="submit" value="삭제">
-        </div> -->
-  </div>
-  <div class="col-xl-3 col-lg-2 col-md-1 col-sm-auto"></div>
+		<div class="card input-group ms-2 mb-3">
+			<span class="input-group-text">보유 기술</span>
+			<div class="d-flex flex-wrap">
+				{{#skillList}}
+					<div class="form-check d-inline-block ms-3 me-2">
+						<input class="form-check-input" type="checkbox" id="skill{{ id }}" value="{{ id }}"
+						       name="skillList"
+						       disabled/>
+						<label class="form-check-label">{{ skillname }}</label>
+					</div>
+				{{/skillList}}
+			</div>
+		</div>
+		<div class="input-group ms-2 mb-3">
+			<span class="input-group-text">자기소개서</span>
+			<textarea class="form-control" rows="5" disabled>{{{resume.personalStatement}}}</textarea>
+		</div>
+		<!-- disabled속성은 입력할 수 없는 input태그를 만든다 -->
+		<!-- disabled속성은 적용된 input은 서버로 데이터가 전송되지 않는다-->
+		<!-- readonly속성은 읽기전용 input태그를 만든다 -->
+		<!-- disabled ="ture"가 생략 된것-->
+		<!-- <div>
+                <input class=" btn btn-primary m-2 mb-3 w-20" type="submit" value="닫기">
+                <input class=" btn btn-warning m-2 mb-3 w-20" type="submit" value="수정">
+                <input class=" btn btn-danger m-2 mb-3 w-20" type="submit" value="삭제">
+            </div> -->
+	</div>
+	<div class="col-xl-3 col-lg-2 col-md-1 col-sm-auto"></div>
 </div>
 
 {{#userSkillList}}
-<div type="hidden" id="{{ skill.id }}" class="number"></div>
+	<div type="hidden" id="{{ skill.id }}" class="number"></div>
 {{/userSkillList}}
 
 <script>
-  function boxSelect() {
-    let div = document.querySelectorAll(".number");
+	function boxSelect() {
+		let div = document.querySelectorAll(".number");
 
-    for (let index = 0; index < div.length; index++) {
-      const element = div[index].id;
-      console.log(element);
-      boxCheck(element);
-    }
-  }
+		for (let index = 0; index < div.length; index++) {
+			const element = div[index].id;
+			console.log(element);
+			boxCheck(element);
+		}
+	}
 
-  function boxCheck(id) {
-    console.log(id);
-    let selectedBox = document.querySelector(`#skill${id}`);
-    selectedBox.checked = true;
-  }
+	function boxCheck(id) {
+		console.log(id);
+		let selectedBox = document.querySelector(`#skill${id}`);
+		selectedBox.checked = true;
+	}
 
-  boxSelect();
+	boxSelect();
 
-  const position = "{{ resume.user.position }}"; // 이력서의 직무 정보를 가져옴
+	const position = "{{ resume.user.position }}"; // 이력서의 직무 정보를 가져옴
 
-  if (position === "백엔드") {
-    document.getElementById("백엔드").checked = true;
-  }
-  if (position === "프론트엔드") {
-    document.getElementById("프론트엔드").checked = true;
-  }
-  if (position === "풀스택") {
-    document.getElementById("풀스택").checked = true;
-  }
-  if (position === "안드로이드") {
-    document.getElementById("안드로이드").checked = true;
-  }
-  if (position === "IOS") {
-    document.getElementById("IOS").checked = true;
-  }
-  if (position === "임베디드") {
-    document.getElementById("임베디드").checked = true;
-  }
-  if (position === "빅데이터") {
-    document.getElementById("빅데이터").checked = true;
-  }
-  if (position === "서버") {
-    document.getElementById("서버").checked = true;
-  }
-  if (position === "머신러닝") {
-    document.getElementById("머신러닝").checked = true;
-  }
+	if (position === "백엔드") {
+		document.getElementById("백엔드").checked = true;
+	}
+	if (position === "프론트엔드") {
+		document.getElementById("프론트엔드").checked = true;
+	}
+	if (position === "풀스택") {
+		document.getElementById("풀스택").checked = true;
+	}
+	if (position === "안드로이드") {
+		document.getElementById("안드로이드").checked = true;
+	}
+	if (position === "IOS") {
+		document.getElementById("IOS").checked = true;
+	}
+	if (position === "임베디드") {
+		document.getElementById("임베디드").checked = true;
+	}
+	if (position === "빅데이터") {
+		document.getElementById("빅데이터").checked = true;
+	}
+	if (position === "서버") {
+		document.getElementById("서버").checked = true;
+	}
+	if (position === "머신러닝") {
+		document.getElementById("머신러닝").checked = true;
+	}
 </script>
 {{> layout/footer}}
